--- a/Koha/Plugin/Com/ByWaterSolutions/LabelMaker/print_labels.tt
+++ b/Koha/Plugin/Com/ByWaterSolutions/LabelMaker/print_labels.tt
@@ -45,8 +45,20 @@
                     <option value="18">18px</option>
                     <option value="19">19px</option>
                     <option value="20">20px</option>
+                    <option value="20">21px</option>
                     <option value="22">22px</option>
+                    <option value="23">23px</option>
+                    <option value="24">24px</option>
+                    <option value="25">25px</option>
+                    <option value="26">26px</option>
+                    <option value="27">27px</option>
+                    <option value="28">28px</option>
+                    <option value="29">29px</option>
                     <option value="30">30px</option>
+                    <option value="31">31px</option>
+                    <option value="32">32px</option>
+                    <option value="33">33px</option>
+                    <option value="34">34px</option>
                     <option value="35">35px</option>
                     <option value="40">40px</option>
                     <option value="45">45px</option>
