--- a/Koha/Plugin/Com/ByWaterSolutions/LabelMaker/label_maker_home.tt
+++ b/Koha/Plugin/Com/ByWaterSolutions/LabelMaker/label_maker_home.tt
@@ -37,170 +37,177 @@
         </a>
     </div>
 
-    <div id="tabs">
-      <ul>
-        <li><a href="#templates-content">Templates</a></li>
-        <li><a href="#layouts-content">Layouts</a></li>
-        <li><a href="#printer_profiles-content">Printer profiles</a></li>
+    <div id="tabs" class="toptabs">
+      <ul class="nav nav-tabs" role="tablist">
+        <li role="presentation" class="active">
+            <a href="#templates-content" aria-controls="templates-content" role="tab" data-toggle="tab">Templates</a>
+        </li>
+        <li role="presentation">
+            <a href="#layouts-content" aria-controls="layouts-content" role="tab" data-toggle="tab">Layouts</a>
+        </li>
+        <li role="presentation">
+            <a href="#printer_profiles-content" aria-controls="printer_profiles-content" role="tab" data-toggle="tab">Printer profiles</a>
+        </li>
       </ul>
-      <div id="templates-content">
-        <table class="table table-bordered table-striped">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Content</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
+      <div class="tab-content">
+          <div id="templates-content" class="tab-pane active" role="tabpanel">
+            <table class="table table-bordered table-striped">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Content</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
 
-            <tbody>
-                [% IF templates %]
-                    [% FOREACH t IN templates %]
-                        <tr>
-                            <td>[% t.name %]</td>
-                            <td><pre>[% t.content | html %]</pre></td>
-                            <td>
-                                <div class="dropdown">
-                                    <a class="btn btn-default dropdown-toggle" role="button" data-toggle="dropdown" href="#">
-                                        <i class="fa fa-plus"></i> Actions <b class="caret"></b>
-                                    </a>
+                <tbody>
+                    [% IF templates %]
+                        [% FOREACH t IN templates %]
+                            <tr>
+                                <td>[% t.name %]</td>
+                                <td><pre>[% t.content | html %]</pre></td>
+                                <td>
+                                    <div class="dropdown">
+                                        <a class="btn btn-default dropdown-toggle" role="button" data-toggle="dropdown" href="#">
+                                            <i class="fa fa-plus"></i> Actions <b class="caret"></b>
+                                        </a>
 
-                                    <ul class="dropdown-menu" role="menu">
-                                        <li>
-                                            <a href="?class=[% CLASS %]&method=[% METHOD %]&action=edit&type=templates&id=[% t.id %]">
-                                                <i class="fa fa-edit"></i> Edit
-                                            </a>
-                                        </li>
+                                        <ul class="dropdown-menu" role="menu">
+                                            <li>
+                                                <a href="?class=[% CLASS %]&method=[% METHOD %]&action=edit&type=templates&id=[% t.id %]">
+                                                    <i class="fa fa-edit"></i> Edit
+                                                </a>
+                                            </li>
 
-                                        <li>
-                                            <a href="?class=[% CLASS %]&method=[% METHOD %]&action=copy&type=templates&id=[% t.id %]">
-                                                <i class="fa fa-copy"></i> Copy
-                                            </a>
-                                        </li>
+                                            <li>
+                                                <a href="?class=[% CLASS %]&method=[% METHOD %]&action=copy&type=templates&id=[% t.id %]">
+                                                    <i class="fa fa-copy"></i> Copy
+                                                </a>
+                                            </li>
 
-                                        <li>
-                                            <a href="?class=[% CLASS %]&method=[% METHOD %]&action=delete&type=templates&id=[% t.id %]" onclick="return confirm('Are you sure?')"
-                                                <i class="fa fa-trash"></i> Delete
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </td>
-                        </tr>
+                                            <li>
+                                                <a href="?class=[% CLASS %]&method=[% METHOD %]&action=delete&type=templates&id=[% t.id %]" onclick="return confirm('Are you sure?')">
+                                                    <i class="fa fa-trash"></i> Delete
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </td>
+                            </tr>
+                        [% END %]
+                    [% ELSE %]
+                        <tr><td colspan="99">No templates exist</td></tr>
                     [% END %]
-                [% ELSE %]
-                    <tr><td colspan="99">No templates exist</td></tr>
-                [% END %]
-            </tbody>
-        </table>
-      </div>
+                </tbody>
+            </table>
+          </div>
 
-      <div id="layouts-content">
+          <div id="layouts-content" class="tab-pane" role="tabpanel">
 
-        <table class="table table-bordered table-striped">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Content</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
+            <table class="table table-bordered table-striped">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Content</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
 
-            <tbody>
-                [% IF layouts %]
-                    [% FOREACH l IN layouts %]
-                        <tr>
-                            <td>[% l.name %]</td>
-                            <td><pre>[% l.content %]</pre></td>
-                            <td>
-                                <div class="dropdown">
-                                    <a class="btn btn-default dropdown-toggle" role="button" data-toggle="dropdown" href="#">
-                                        <i class="fa fa-plus"></i> Actions <b class="caret"></b>
-                                    </a>
+                <tbody>
+                    [% IF layouts %]
+                        [% FOREACH l IN layouts %]
+                            <tr>
+                                <td>[% l.name %]</td>
+                                <td><pre>[% l.content %]</pre></td>
+                                <td>
+                                    <div class="dropdown">
+                                        <a class="btn btn-default dropdown-toggle" role="button" data-toggle="dropdown" href="#">
+                                            <i class="fa fa-plus"></i> Actions <b class="caret"></b>
+                                        </a>
 
-                                    <ul class="dropdown-menu" role="menu">
-                                        <li>
-                                            <a href="?class=[% CLASS %]&method=[% METHOD %]&action=edit&type=layouts&id=[% l.id %]">
-                                                <i class="fa fa-edit"></i> Edit
-                                            </a>
-                                        </li>
+                                        <ul class="dropdown-menu" role="menu">
+                                            <li>
+                                                <a href="?class=[% CLASS %]&method=[% METHOD %]&action=edit&type=layouts&id=[% l.id %]">
+                                                    <i class="fa fa-edit"></i> Edit
+                                                </a>
+                                            </li>
 
-                                        <li>
-                                            <a href="?class=[% CLASS %]&method=[% METHOD %]&action=copy&type=layouts&id=[% l.id %]">
-                                                <i class="fa fa-copy"></i> Copy
-                                            </a>
-                                        </li>
+                                            <li>
+                                                <a href="?class=[% CLASS %]&method=[% METHOD %]&action=copy&type=layouts&id=[% l.id %]">
+                                                    <i class="fa fa-copy"></i> Copy
+                                                </a>
+                                            </li>
 
-                                        <li>
-                                            <a href="?class=[% CLASS %]&method=[% METHOD %]&action=delete&type=layouts&id=[% l.id %]" onclick="return confirm('Are you sure?')"
-                                                <i class="fa fa-trash"></i> Delete
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </td>
-                        </tr>
+                                            <li>
+                                                <a href="?class=[% CLASS %]&method=[% METHOD %]&action=delete&type=layouts&id=[% l.id %]" onclick="return confirm('Are you sure?')">
+                                                    <i class="fa fa-trash"></i> Delete
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </td>
+                            </tr>
+                        [% END %]
+                    [% ELSE %]
+                        <tr><td colspan="99">No layouts exist</td></tr>
                     [% END %]
-                [% ELSE %]
-                    <tr><td colspan="99">No layouts exist</td></tr>
-                [% END %]
-            </tbody>
-        </table>
-      </div>
+                </tbody>
+            </table>
+          </div>
 
-      <div id="printer_profiles-content">
-        <table class="table table-bordered table-striped">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Content</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
+          <div id="printer_profiles-content" class="tab-pane" role="tabpanel">
+            <table class="table table-bordered table-striped">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Content</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
 
-            <tbody>
-                [% IF printer_profiles %]
-                    [% FOREACH p IN printer_profiles %]
-                        <tr>
-                            <td>[% p.name %]</td>
-                            <td><pre>[% p.content %]</pre></td>
-                            <td>
-                                <div class="dropdown">
-                                    <a class="btn btn-default dropdown-toggle" role="button" data-toggle="dropdown" href="#">
-                                        <i class="fa fa-plus"></i> Actions <b class="caret"></b>
-                                    </a>
+                <tbody>
+                    [% IF printer_profiles %]
+                        [% FOREACH p IN printer_profiles %]
+                            <tr>
+                                <td>[% p.name %]</td>
+                                <td><pre>[% p.content %]</pre></td>
+                                <td>
+                                    <div class="dropdown">
+                                        <a class="btn btn-default dropdown-toggle" role="button" data-toggle="dropdown" href="#">
+                                            <i class="fa fa-plus"></i> Actions <b class="caret"></b>
+                                        </a>
 
-                                    <ul class="dropdown-menu" role="menu">
-                                        <li>
-                                            <a href="?class=[% CLASS %]&method=[% METHOD %]&action=edit&type=printer_profiles&id=[% p.id %]">
-                                                <i class="fa fa-edit"></i> Edit
-                                            </a>
-                                        </li>
+                                        <ul class="dropdown-menu" role="menu">
+                                            <li>
+                                                <a href="?class=[% CLASS %]&method=[% METHOD %]&action=edit&type=printer_profiles&id=[% p.id %]">
+                                                    <i class="fa fa-edit"></i> Edit
+                                                </a>
+                                            </li>
 
-                                        <li>
-                                            <a href="?class=[% CLASS %]&method=[% METHOD %]&action=copy&type=printer_profiles&id=[% p.id %]">
-                                                <i class="fa fa-copy"></i> Copy
-                                            </a>
-                                        </li>
+                                            <li>
+                                                <a href="?class=[% CLASS %]&method=[% METHOD %]&action=copy&type=printer_profiles&id=[% p.id %]">
+                                                    <i class="fa fa-copy"></i> Copy
+                                                </a>
+                                            </li>
 
-                                        <li>
-                                            <a href="?class=[% CLASS %]&method=[% METHOD %]&action=delete&type=printer_profiles&id=[% p.id %]" onclick="return confirm('Are you sure?')"
-                                                <i class="fa fa-trash"></i> Delete
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </td>
-                        </tr>
+                                            <li>
+                                                <a href="?class=[% CLASS %]&method=[% METHOD %]&action=delete&type=printer_profiles&id=[% p.id %]" onclick="return confirm('Are you sure?')"
+                                                    <i class="fa fa-trash"></i> Delete
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </td>
+                            </tr>
+                        [% END %]
+                    [% ELSE %]
+                        <tr><td colspan="99">No printer profiles exist</td></tr>
                     [% END %]
-                [% ELSE %]
-                    <tr><td colspan="99">No printer profiles exist</td></tr>
-                [% END %]
-            </tbody>
-        </table>
-      </div>
+                </tbody>
+            </table>
+          </div>
+        </div>
     </div>
-
     <script>
         $(document).ready( function() {
             const tab = "[% tab %]";
@@ -225,15 +232,6 @@
                 lessLink: '<a href="#">Show less code</a>'
             });
 
-            $("#tabs").tabs({
-                active: index,
-                activate: function( event, ui ) {
-                    $('pre').readmore({
-                        moreLink: '<a href="#">Show all code</a>',
-                        lessLink: '<a href="#">Show less code</a>'
-                    });
-                }
-            });
         });
     </script>
 [% INCLUDE 'intranet-bottom.inc' %]
