Fix label_maker_home.tt for Bootstrap changes part 2

--- a/Koha/Plugin/Com/ByWaterSolutions/LabelMaker/label_maker_home.tt
+++ b/Koha/Plugin/Com/ByWaterSolutions/LabelMaker/label_maker_home.tt
@@ -97,19 +97,19 @@
 
                                         <ul class="dropdown-menu" role="menu">
                                             <li>
-                                                <a href="?class=[% CLASS %]&method=[% METHOD %]&action=edit&type=templates&id=[% t.id %]">
+                                                <a class="dropdown-item" href="?class=[% CLASS %]&method=[% METHOD %]&action=edit&type=templates&id=[% t.id %]">
                                                     <i class="fa fa-edit"></i> Edit
                                                 </a>
                                             </li>
 
                                             <li>
-                                                <a href="?class=[% CLASS %]&method=[% METHOD %]&action=copy&type=templates&id=[% t.id %]">
+                                                <a class="dropdown-item" href="?class=[% CLASS %]&method=[% METHOD %]&action=copy&type=templates&id=[% t.id %]">
                                                     <i class="fa fa-copy"></i> Copy
                                                 </a>
                                             </li>
 
                                             <li>
-                                                <a href="?class=[% CLASS %]&method=[% METHOD %]&action=delete&type=templates&id=[% t.id %]" onclick="return confirm('Are you sure?')">
+                                                <a class="dropdown-item" href="?class=[% CLASS %]&method=[% METHOD %]&action=delete&type=templates&id=[% t.id %]" onclick="return confirm('Are you sure?')">
                                                     <i class="fa fa-trash"></i> Delete
                                                 </a>
                                             </li>
@@ -149,19 +149,19 @@
 
                                         <ul class="dropdown-menu" role="menu">
                                             <li>
-                                                <a href="?class=[% CLASS %]&method=[% METHOD %]&action=edit&type=patron_templates&id=[% t.id %]">
+                                                <a class="dropdown-item" href="?class=[% CLASS %]&method=[% METHOD %]&action=edit&type=patron_templates&id=[% t.id %]">
                                                     <i class="fa fa-edit"></i> Edit
                                                 </a>
                                             </li>
 
                                             <li>
-                                                <a href="?class=[% CLASS %]&method=[% METHOD %]&action=copy&type=patron_templates&id=[% t.id %]">
+                                                <a class="dropdown-item" href="?class=[% CLASS %]&method=[% METHOD %]&action=copy&type=patron_templates&id=[% t.id %]">
                                                     <i class="fa fa-copy"></i> Copy
                                                 </a>
                                             </li>
 
                                             <li>
-                                                <a href="?class=[% CLASS %]&method=[% METHOD %]&action=delete&type=patron_templates&id=[% t.id %]" onclick="return confirm('Are you sure?')">
+                                                <a class="dropdown-item" href="?class=[% CLASS %]&method=[% METHOD %]&action=delete&type=patron_templates&id=[% t.id %]" onclick="return confirm('Are you sure?')">
                                                     <i class="fa fa-trash"></i> Delete
                                                 </a>
                                             </li>
@@ -201,19 +201,19 @@
 
                                         <ul class="dropdown-menu" role="menu">
                                             <li>
-                                                <a href="?class=[% CLASS %]&method=[% METHOD %]&action=edit&type=layouts&id=[% l.id %]">
+                                                <a class="dropdown-item" href="?class=[% CLASS %]&method=[% METHOD %]&action=edit&type=layouts&id=[% l.id %]">
                                                     <i class="fa fa-edit"></i> Edit
                                                 </a>
                                             </li>
 
                                             <li>
-                                                <a href="?class=[% CLASS %]&method=[% METHOD %]&action=copy&type=layouts&id=[% l.id %]">
+                                                <a class="dropdown-item" href="?class=[% CLASS %]&method=[% METHOD %]&action=copy&type=layouts&id=[% l.id %]">
                                                     <i class="fa fa-copy"></i> Copy
                                                 </a>
                                             </li>
 
                                             <li>
-                                                <a href="?class=[% CLASS %]&method=[% METHOD %]&action=delete&type=layouts&id=[% l.id %]" onclick="return confirm('Are you sure?')">
+                                                <a class="dropdown-item" href="?class=[% CLASS %]&method=[% METHOD %]&action=delete&type=layouts&id=[% l.id %]" onclick="return confirm('Are you sure?')">
                                                     <i class="fa fa-trash"></i> Delete
                                                 </a>
                                             </li>
@@ -247,25 +247,25 @@
                                 <td><pre>[% p.content %]</pre></td>
                                 <td>
                                     <div class="dropdown">
-                                        <a class="btn btn-default dropdown-toggle" role="button" data-toggle="dropdown" href="#">
+                                        <a class="btn btn-default dropdown-toggle" role="button" data-bs-toggle="dropdown" href="#">
                                             <i class="fa fa-plus"></i> Actions <b class="caret"></b>
                                         </a>
 
                                         <ul class="dropdown-menu" role="menu">
                                             <li>
-                                                <a href="?class=[% CLASS %]&method=[% METHOD %]&action=edit&type=printer_profiles&id=[% p.id %]">
+                                                <a class="dropdown-item" href="?class=[% CLASS %]&method=[% METHOD %]&action=edit&type=printer_profiles&id=[% p.id %]">
                                                     <i class="fa fa-edit"></i> Edit
                                                 </a>
                                             </li>
 
                                             <li>
-                                                <a href="?class=[% CLASS %]&method=[% METHOD %]&action=copy&type=printer_profiles&id=[% p.id %]">
+                                                <a class="dropdown-item" href="?class=[% CLASS %]&method=[% METHOD %]&action=copy&type=printer_profiles&id=[% p.id %]">
                                                     <i class="fa fa-copy"></i> Copy
                                                 </a>
                                             </li>
 
                                             <li>
-                                                <a href="?class=[% CLASS %]&method=[% METHOD %]&action=delete&type=printer_profiles&id=[% p.id %]" onclick="return confirm('Are you sure?')"
+                                                <a class="dropdown-item" href="?class=[% CLASS %]&method=[% METHOD %]&action=delete&type=printer_profiles&id=[% p.id %]" onclick="return confirm('Are you sure?')"
                                                     <i class="fa fa-trash"></i> Delete
                                                 </a>
                                             </li>
